# embassy-pico-template

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs
